# Skiller

./: .editorconfig  .eslintrc.json  .gitignore  .prettierrc  LICENSE  README-en.md  README.md  Technology_Stack_Blueprint.md  index.html  openspec-功能与命令全览.md  openspec-最佳实践与落地建议.md  package.json  pnpm-lock.yaml  start-app.sh  vite.config.js  vitest.config.ts
src-tauri/: Cargo.toml  built-in-repos.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/examples/: tag_tree_test.rs
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  test_utils.rs
src-tauri/src/commands/: clawhub.rs  config.rs  desktop.rs  log.rs  mod.rs  openspec.rs  openspec_terminal.rs  project.rs  project_skill.rs  repo.rs  skill.rs  skill_file.rs  tag.rs
src-tauri/src/db/: connection.rs  mod.rs  schema.rs
src-tauri/src/db/migrations/: mod.rs  rollback_v2.rs  v1.rs  v10.rs  v11.rs  v12.rs  v13.rs  v14.rs  v15.rs  v16.rs  v2.rs  v3.rs  v4.rs  (+5 more)
src-tauri/src/models/: clawhub.rs  config.rs  conflict.rs  distribution.rs  log.rs  mod.rs  npx_import.rs  openspec.rs  project.rs  repo.rs  skill.rs  tag.rs
src-tauri/src/services/: clawhub_service.rs  config_service.rs  distribution_service.rs  log_service.rs  mod.rs  openspec_service.rs  project_service.rs  proxy_service.rs  repo_service.rs  skill_file_service.rs  skill_service.rs  tag_binding_service.rs  tag_service.rs
src-tauri/src/utils/: crypto.rs  fs.rs  git.rs  markdown.rs  mod.rs  shell.rs  symlink.rs
src-tauri/test_db/: skiller.db
src-tauri/tests/: git_sync_test.rs
(+202 files in other folders)
