[package]
name = "skiller"
version = "0.1.5"
description = "跨平台 Skill 管理工具"
authors = ["Skiller Team"]
edition = "2021"
repository = "https://github.com/AFunc-OPC/Skiller"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.7", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
git2 = { version = "0.18", features = ["vendored-openssl"] }
zip = "0.6"
fs_extra = "1.3"
dirs = "5.0"
directories = "5.0"
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[example]]
name = "tag_tree_test"
path = "examples/tag_tree_test.rs"
